animacion porteria in progress

--- a/SESSION 2/index.html
+++ b/SESSION 2/index.html
@@ -37,17 +37,10 @@
 </label>
 <label for="birthday">Date of birth:</label>
 <input type="date" id="birthday" name="birthday"><br>
+<div id="nivelldestudis">
 <label for="ensenyaments">Choose your browser from the list:</label>
   <input list="ensenyaments" name="ensenyaments" id="ensenyaments">
-  <datalist id="ensenyaments">
-    <option value="Educació secundària obligatòria">
-    <option value="Programes de formació i inserció">
-    <option value="Formació professional">
-    <option value="Batxillerat">
-    <option value="Ensenyaments artístics superiors">
-    <option value="Batxillerat">
-    <option value="Ensenyaments esportius">
-  </datalist><br>
+</div>
   <label>Situacio laboral:<br>
     <input type="radio" id="estudiant"
      name="lab" value="estudiant">
