--- a/JUEGUITO/easing_completed.html
+++ b/JUEGUITO/easing_completed.html
@@ -3,8 +3,8 @@
         <link rel="stylesheet" href="easing_completed.css">
     </head>
     <body>
-        <img src="porteria.svg" class="estatico" id="porteria">
-        <img src="pelota.png" class="movimiento" id="pelota">
+        <img src="imagenes/PORTERIA.svg" class="estatico" id="porteria">
+        <img src="imagenes/pelota.png" class="movimiento" id="pelota">
         
         <script src="easing_completed.js"></script>
     </body>
